# doc-automation-staging

./: .buildinfo  .dockerignore  .gitignore  Dockerfile  README.md  author.html  backend.html  docker-compose.yml  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tests.html
.github/workflows/: sphinx-docs.yml
_modules/: index.html
_modules/backend/: wsgi.html
_modules/tests/: wsgi_test.html
_sources/: backend.rst.txt  index.rst.txt  modules.rst.txt  tests.rst.txt
backend/: wsgi.py
docs/source/: author.md  conf.py  index.rst
nginx/: docs.conf
tests/: __init__.py  wsgi_test.py
